Sat Aug 02 19:49:38 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/Makefile.am include/tds.h include/tdsiconv.h:
	- do not install tdsiconv.h

Fri Aug 01 17:50:46 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/connectparams.c src/odbc/convert_sql2string.c:
	* src/odbc/error.c:
	- remove some FIXME from code

Fri Aug 01 15:45:39 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c:
	- do not cause invalid data with variant, replace with NULL

Fri Aug 01 08:38:20 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/error.c src/odbc/odbc.c:
	* src/odbc/prepare_query.c src/tds/mem.c:
	- merge Peter Daecon patch:
	 - fix state handling (consolidation and reuse)
	 - fix error with MS DM
	- remove native parameter from odbc_errs_add (always 0)

Thu Jul 31 23:45:32 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/read.c:
	- merge Peter Daecon patch (memory leak fix)
	* win32/dev-cpp/FreeTDS.dev win32/dev-cpp/Makefile.win:
	* win32/msvc6/FreeTDS.dsp:
	- merge Peter Daecon patch:
	 - update msvc project for ODBC
	- update other win32 projects

Thu Jul 31 23:21:41 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/Makefile.am:	
	* src/odbc/descriptor.c(added):
	- continue merge from Steve patch:
	 - merged descriptors declaration and allocation
	
Thu Jul 31 14:50:47 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc_util.c src/odbc/odbc_util.h:
	- continue merge from Steve patch:
	 - copyed odbc_tds_to_sql_typename function

Thu Jul 31 14:32:32 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/odbc_util.c src/odbc/odbc_util.h:
	- continue merge from Steve patch:
	 - put some code in utils

Wed Jul 30 12:06:11 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/pool/config.c don't lowercase the incoming username.

Wed Jul 30 12:00:31 EDT 2003	JK Lowden <jklowden@schemamania.org>